--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@ html {
 body {
     font-family: regular_smooch_sans;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #3b4053;
 }
 
 h1, h2, h3, h4, h5, h6, p {
