--- a/styles/header.css
+++ b/styles/header.css
@@ -9,20 +9,21 @@
 .app__header-container {
     align-items: center;
     display: flex;
-    gap: 2rem;
+    flex-direction: column;
     height: 100%;
     justify-content: center;
     padding: 2rem 4rem;
 }
 .app__header-container__image-container {
     padding: 2rem;
-    flex: 1;
     height: 100%;
-    width: 100%;
+    width: 500px;
 }
 
 .app__header-container__image {
+    border-radius: 0.4rem;
     height: 100%;
+    overflow: hidden;
     position: relative;
     width: 100%;
 }
@@ -32,12 +33,7 @@
 }
 .app__header-container__text h2 {
     color: #fff;
-    font-size: 4rem;
+    font-size: 1.5rem;
     font-weight: 500;
     margin-bottom: 1rem;
-}
-.app__header-container__text p {
-    color: #fff;
-    font-size: 1.2rem;
-    font-weight: 500;
 }
