css color adjustments

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 
 .app__header {
-    background-color: #000000;
+    background-color: #0C0813;
     height: calc(100vh - 4rem);
     overflow: hidden;
     width: 100%;
