--- a/styles/guardian.css
+++ b/styles/guardian.css
@@ -33,15 +33,19 @@
 .app__guardians-container__image {
     display: flex;
     flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
     gap: 2rem;
     width: 100%;
 }
 
 .app__guardians-container__image .app__guardian-image {
     border-radius: 1rem;
-    height: 300px;
+    /* height: 300px; */
     margin-right: 1rem;
-    min-width: 350px;
+    /* min-width: 350px; */
+    width: 100%;
+    height: auto;
     overflow: hidden;
     position: relative;
 }
@@ -58,6 +62,10 @@
 @media screen and (max-width: 824px) {
     .app__guardians {
         padding: 3rem 1.5rem 0;
+    }
+    .app__guardians-container__image {
+        grid-gap: 1.5rem;
+        grid-template-columns: repeat(2, 1fr);
     }
     .app__guardians-container__textbox h2 {
         font-size: 2.5rem;
@@ -79,10 +87,8 @@
         font-size: 1.1rem;
         line-height: 1.5rem;
     }
-}
-
-@media screen and (max-width: 460px) {
     .app__guardians-container__image {
-        width: 100%;
+        grid-gap: 1rem;
+        grid-template-columns: repeat(1, 1fr);
     }
 }
