--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,26 @@
 
 .app__header {
-    height: calc(100vh - 4rem);
+    align-items: center;
+    background-image: url('../assets/images/Fortuna.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    height: 100vh;
+    margin-top: -4rem;
+    justify-content: center;
     overflow: hidden;
     width: 100%;
+}
+.app__header-overlay {
+    background-color: rgba(0,0,0,0.4);
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 1;
 }
 
 .app__header-container {
@@ -10,8 +28,8 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    justify-content: center;
-    padding: 2rem 4rem;
+    padding: 4rem 4rem;
+    z-index: 2;
 }
 .app__header-container__image-container {
     padding: 2rem;
