--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,20 +1,25 @@
 
 .app__navbar {
-    background-color: inherit;
-    background-color: #0C0813;
-    left: 0;
+    align-items: center;
+    display: flex;
     height: 4rem;
+    left: 0;
     position: fixed;
     top: 0;
+    transition: all ease 300ms;
     width: 100%;
-    z-index: 2;
+    z-index: 10;
+}
+.app__navbar.appear {
+    background-color: #0C0813;
 }
 
 .app__navbar-container {
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding: 1.5rem 3rem;
+    padding: 0 1rem;
+    width: 100%;
 }
 .app__navbar-container__links ul {
     align-items: center;
