--- a/styles/header.css
+++ b/styles/header.css
@@ -50,7 +50,8 @@
 }
 .app__header-container__text h2 {
     color: #fff;
-    font-size: 1.5rem;
-    font-weight: 500;
+    font-size: 5rem;
+    font-weight: 700;
     margin-bottom: 1rem;
+    font-family: var(--title);
 }
