--- a/styles/guardian.css
+++ b/styles/guardian.css
@@ -60,6 +60,28 @@
     transform: scale(1.08px);
 }
 
+.app__guardians-link__container {
+    text-align: center;
+    margin-top: 2rem;
+}
+
+.app__guardians-link__container a {
+    background-color: #fff;
+    border: none;
+    color: #000000;
+    border-radius: 2rem;
+    font-size: 1.4rem;
+    font-weight: 600;
+    font-family: var(--title);
+    outline: none;
+    padding: 1rem 2rem;
+    transition: all 250ms ease-in;
+}
+.app__guardians-link__container a:hover {
+    background-color: #293040;
+    color: #fff;
+}
+
 @media screen and (max-width: 824px) {
     .app__guardians {
         padding: 3rem 1.5rem 0;
