--- a/styles/howtoplay.css
+++ b/styles/howtoplay.css
@@ -7,14 +7,12 @@
 }
 
 .app__howtoplay-container__header h2 {
-    color: #fff;
     font-family: var(--title);
     font-size: 3rem;
     font-weight: 500;
     margin-bottom: 1rem;
 }
 .app__howtoplay-container__header p {
-    color: #fff;
     font-family: var(--subtitle);
     font-size: 1.2rem;
     font-weight: 500;
@@ -36,7 +34,6 @@
     align-items: center;
     background-color: #0C0813;
     border-radius: 50%;
-    color: #fff;
     display: flex;
     font-family: inherit;
     font-size: 1.5rem;
@@ -52,6 +49,7 @@
 }
 
 .app__howtoplay-card__container h3 {
+    color: #000000;
     font-size: 1.6rem;
     font-weight: 500;
     font-family: var(--title);
@@ -59,6 +57,7 @@
 }
 
 .app__howtoplay-card__container p {
+    color: #000000;
     font-size: .875rem;
     font-weight: 300;
     font-family: var(--subtitle);
