--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,4 +1,12 @@
 
+.app__layout {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    min-height: 100%;
+}
 .app__layout-main {
     margin-top: 4rem;
+    flex-grow: 1;
+    min-height: 100%;
 }
