--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -33,8 +33,8 @@
 
 .app__navbar-container a {
     color: #fff;
-    font-family: var(--subtitle);
-    font-size: 1rem;
+    font-family: var(--title);
+    font-size: 1.2rem;
     font-weight: 500;
 }
 
