--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,12 +15,14 @@
 
 html, #__next {
     scroll-behavior: smooth;
+    font-size: 100%;
     height: 100%;
 }
 
 body {
     background-color: #0C0813;
     color: #fff;
+    font-size: 100%;
     height: 100%;
 }
 
@@ -31,6 +33,7 @@ h1, h2, h3, h4, h5, h6, p {
 .section__container {
     margin: auto;
     max-width: 1024px;
+    margin-bottom: 6rem;
 }
 
 @media screen and (max-width: 1023px) {
