--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -56,6 +56,8 @@
 .app__navbar-mobile__menu {
     align-items: flex-end;
     background-color: #1A1D24;
+    background-color: #0C0813;
+    box-shadow: 0px 1px 2px rgba(255, 255, 255, 0.4);
     border-radius: 5px;
     box-shadow: 0 0 5 rgba(0,0,0,0.2);
     display: flex;
@@ -67,7 +69,6 @@
     position: absolute;
     right: 10px;
     top: 40px;
-    text-align: end;
 }
 .app__navbar-mobile__menu li {
     margin: 1rem 0;
