--- a/styles/guardians.css
+++ b/styles/guardians.css
@@ -46,6 +46,7 @@
     border-radius: 1rem;
     height: auto;
     margin-right: 1rem;
+    margin-bottom: 3rem;
     overflow: hidden;
     position: relative;
     width: 100%;
