--- a/styles/divine-draw.css
+++ b/styles/divine-draw.css
@@ -261,3 +261,20 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     font-weight: 500;
     text-align: right;
 }
+
+@media screen and (max-width: 960px) {
+    .app__divine-draw__steps {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .app__divine-draw__steps {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0 1rem;
+    }
+
+    .app__divine-draw__steps-container h2 {
+        font-size: 2.5rem;
+    }
+}
