--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,9 +3,10 @@
     align-items: center;
     background-color: inherit;
     display: flex;
-    flex-grow: 0;
+    flex-grow: 1;
     flex-shrink: 0;
-    height: 4rem;
+    justify-content: center;
+    height: 5rem;
     left: 0;
     position: fixed;
     top: 0;
@@ -20,10 +21,15 @@
 .app__navbar-container {
     align-items: center;
     display: flex;
-    justify-content: space-between;
-    padding: 0 1rem;
+    justify-content: center;
+    padding: 1rem 1.5rem ;
     width: 100%;
 }
+
+.app__navbar-container__logo {
+    flex-grow: 1;
+}
+
 .app__navbar-container__links ul {
     align-items: center;
     display: flex;
@@ -32,21 +38,19 @@
 }
 
 .app__navbar-container a {
-    color: #fff;
-    font-family: var(--title);
+    color: gray;
+    font-family: var(--subtitle);
     font-size: 1.2rem;
     font-weight: 500;
     transition: all 300ms ease-in;
 }
 
-.app__navbar-container a:hover {
-    border-bottom: 2px solid #fff;
-    padding: 0 0 0.35rem;
+.app__navbar-container .app__navbar-container__links a:hover {
+    color: #fff;
 }
 
 .app__navbar-container__links  a.app__navbar-link__active {
-    border-bottom: 2px solid #fff;
-    padding: 0 0 0.35rem;
+    color: #fff;
 }
 
 .app__navbar-container__btns {
