--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,9 +1,46 @@
-
 .app__footer {
     flex-grow: 0;
     flex-shrink: 0;
-    padding: 4rem 2rem;
+    padding: 2rem 2rem 0;
+    border-top: 1px solid #293040;
 }
+
+.app__footer img {
+    width: 64px;
+    height: 64px;
+}
+
+.app__footer-container h2 {
+    font-size: 3rem;
+    font-weight: 600;
+    font-family: var(--title);
+}
+
+.app__footer-container h3 {
+    font-size: 2.5rem;
+    font-weight: 600;
+    font-family: var(--title);
+}
+
+.app__footer-container h4 {
+    font-size: 1.5rem;
+    font-weight: 600;
+    font-family: var(--title);
+    margin-bottom: 1rem;
+}
+
+.app__footer li a {
+    color: grey;
+    font-size: 1.1rem;
+    font-weight: 400;
+    font-family: var(--subtitle);
+    transition: all .5s ease-in;
+}
+
+.app__footer li a:hover {
+    color: #fff;
+}
+
 .app__footer-container p {
     color: #fff;
     font-family: var(--subtitle);
@@ -14,14 +51,6 @@
     margin-bottom: 2rem;
 }
 
-.app__footer-container ul {
-    align-items: center;
-    display: flex;
-    gap: 2rem;
-    list-style-type: none;
-    justify-content: center;
-}
-
 
 .app__footer-container__social .app__icons svg {
     color: #fff !important;
@@ -30,12 +59,84 @@
     width: 32px;
 }
 
+.app__footer-row {
+    margin-bottom: 2rem;
+}
+
+.app__footer-row:last-child {
+    margin-top: 2rem;
+}
+
+.app__footer .app__footer-row.-links {
+    display: flex;
+    gap: 4rem;
+    justify-content: space-between;
+}
+
+.app__footer-row.-links div {
+    flex: 0.5;
+}
+
+.app__footer .app__footer-links_grid {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1rem;
+}
+
+.app__footer li {
+    margin-bottom: 1.1rem;
+}
+
+.app__footer-row.-socials {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.app__footer-icons {
+    display: flex;
+    gap: 1rem;
+}
+
+.app__footer-icon a {
+    border: 1px solid #293040;
+    border-radius: 1rem;
+    padding: 1rem 1.5rem;
+    color: #fff;
+    font-family: var(--subtitle);
+    font-size: 1.1rem;
+    font-weight: 400;
+    margin-right: 1rem;
+    transition: all .5s ease-in-out;
+}
+
+.app__footer-icon a:hover {
+    background-color: #293040;
+}
+
+.app__footer-icon a span {
+    margin-right: 1rem;
+}
+
+@media screen and (max-width: 956px) {
+    .app__footer-row.-socials {
+        flex-direction: column;
+        margin-bottom: 3rem;
+    }
+
+    .app__footer-row.-socials h2 {
+        margin-bottom: 2rem;
+    }
+}
+
 @media screen and (max-width: 824px) {
+    .app__footer-row.-links {
+        flex-direction: column;
+    }
+
     .app__footer-container ul {
         gap: 1rem;
-    }
-    .app__footer-container__social {
-        margin-bottom: 1rem;
     }
     .app__footer-container__social .app__icons svg {
         font-size: 25px;
@@ -43,6 +144,13 @@
         width: 25px;
     }
     .app__footer-container p {
-        font-size: 12px;
+        font-size: .875rem;
+    }
+
+}
+
+@media screen and (max-width: 560px) {
+    .app__footer-links_grid {
+        grid-template-columns: repeat(1,1fr);
     }
 }
