--- a/styles/how-it-works.css
+++ b/styles/how-it-works.css
@@ -5,13 +5,24 @@
 .app__work-container__field {
     margin-bottom: 2.5rem;
 }
+
+.app__work-container__header {
+    margin-bottom: 4rem;
+}
+
 .app__work-container__header h2 {
     font-family: var(--title);
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     font-weight: 600;
-    margin-bottom: 2.5rem;
-    text-align: center;
+    margin-bottom: 1rem;
 }
+
+.app__work-container__header h3 {
+    font-family: var(--title);
+    font-size: 3rem;
+    width: 824px;
+}
+
 .app__work-container__field p {
     font-family: var(--subtitle);
     font-size: 1rem;
@@ -19,10 +30,64 @@
     font-weight: 300;
 }
 
+.app__work-row {
+    border-radius: 1rem;
+    background-color: #293040;
+    box-shadow: 0px 1px 2px rgba(255,255,255, 0.6);
+    margin: auto;
+    padding: 1rem;
+    height: 100%;
+    width: 100%;
+}
+
+.app__work-steps h3 {
+    font-family: var(--title);
+    font-size: 3rem;
+    font-weight: 600;
+}
+
+.app__work-body {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+}
+
+.app__work-row_field h3 {
+    font-family: var(--title);
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+
+.app__work-row_field p {
+    font-family: var(--subtitle);
+    font-weight: 400;
+    font-size: .875rem;
+}
+
+
+@media screen and (max-width: 1024px) {
+    .app__work-body {
+        grid-template-columns: repeat(2,1fr);
+    }
+
+    .app__work-container__header h3 {
+        width: 700px;
+    }
+}
 
 @media screen and (max-width: 824px) {
     .app__work {
         padding: 3rem 1.5rem 0;
+    }
+
+    .app__work-container__header h3 {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .app__work-body {
+        grid-template-columns: repeat(1,1fr);
     }
 }
 
@@ -30,10 +95,16 @@
     .app__work {
         padding: 2rem 1.5rem;
     }
+
     .app__work-container__header h2 {
         font-size: 2rem;
         margin-bottom: 1.5rem;
     }
+
+    .app__work-container__header h3 {
+        font-size: 1.8rem;
+    }
+
     .app__work-container__field p {
         font-size: .875rem;
     }
