added animation to guardians image

--- a/styles/guardian.css
+++ b/styles/guardian.css
@@ -48,6 +48,15 @@
     height: auto;
 }
 
+.-item1, .-item2, .-item3, .-item4 {
+    transition: all .35s ease-in-out;
+}
+
+.-item1:hover, .-item2:hover, .-item3:hover, .-item4:hover {
+    rotate: 0deg;
+    transform: scale(1.08);
+}
+
 .-item1 {
     rotate: -5deg;
 }
@@ -125,6 +134,7 @@
 .card img {
     height: 100%;
     width: 100%;
+    background-color: coral;
 }
 
 .app__guardian-row.-responsibilities {
